# human

./: .gitignore  LICENSE  TODO.md
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli.rs
cli/tests/fixtures/: broken.hmn  fragment.hmn  valid.hmn
cli/tests/fixtures/with_imports/: main.hmn  rules.hmn
compiler/: Cargo.toml
compiler/src/: error.rs  hmn.rs  ir.rs  json.rs  lib.rs  prompt.rs  system.rs  tests.rs  toml_emit.rs  txt.rs  util.rs  yaml.rs
docs/: README.md  architecture.md  import-resolver.md  lexer.md  parser.md
errors/: Cargo.toml
errors/src/: lib.rs  render.rs  tests.rs
lexer/: Cargo.toml
lexer/src/: error.rs  lexer.rs  lib.rs  tests.rs  token.rs
parser/: Cargo.toml
parser/src/: error.rs  lib.rs  parser.rs  tests.rs  types.rs
prompts/agents/dennis/: goal.md  guidelines.hmn  philosophy.md
resolver/: Cargo.toml
resolver/src/: error.rs  lib.rs  merge.rs  resolve_path.rs  resolver.rs  tests.rs  types.rs
temp/notes/lexer/: 2026-03-04-lexer-final.md  review.md
temp/prompts/agents/dennis/: dennis.md  knowledgebase.hmn  voice.md
